<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">


        <CheckBox
            android:id="@+id/check_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="48dp"
            android:text="@string/coches"
            app:layout_constraintEnd_toStartOf="@+id/check_moto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_moto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="200dp"
            android:text="@string/motos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_car"
            app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_moto">


            <RadioGroup
                android:id="@+id/radiogroup_cars"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radio_car_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_coche_izquierda" />

                <RadioButton
                    android:id="@+id/radio_car_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_coche_derecha" />

                <RadioButton
                    android:id="@+id/radio_car_double"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_coche_doble" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radiogroup_motos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radio_moto_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_moto_izquierda" />


                <RadioButton
                    android:id="@+id/radio_moto_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_moto_derecha" />

                <RadioButton
                    android:id="@+id/radio_moto_double"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imagen_moto_doble" />

            </RadioGroup>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="191dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50">

        <ListView
            android:id="@+id/list_vehicles"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>


</LinearLayout>